--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,3 +80,9 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.plotPaper {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
